Bug 433131 - The tabbox on wayland doesn't blur
Summary: The tabbox on wayland doesn't blur
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-tabbox (other bugs)
Version First Reported In: 5.21.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-18 00:08 UTC by Weng Xuetian
Modified: 2021-06-07 15:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.1
Sentry Crash Report:


Attachments
Breeze task switcher without blur (209.74 KB, image/png)
2021-05-14 20:18 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2021-02-18 00:08:32 UTC
SUMMARY
Tabbox on wayland doesn't have blur in the background

STEPS TO REPRODUCE
1. Start wayland
2. Alt+tab (with default setup)

OBSERVED RESULT
Blur the tabbox

EXPECTED RESULT
Tabbox has blurred background.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Archlinux KDE 5.21
(available in About System)
KDE Plasma Version: 5.21
KDE Frameworks Version: 5.79
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Patrick Silva 2021-05-14 19:02:15 UTC
I have noticed this bug with Breeze task switcher on Plasma 5.22 beta.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 2 Vlad Zahorodnii 2021-05-14 19:29:46 UTC
What desktop theme do you use?
Comment 3 Patrick Silva 2021-05-14 20:18:00 UTC
Created attachment 138434 [details]
Breeze task switcher without blur

(In reply to Vlad Zahorodnii from comment #2)
> What desktop theme do you use?

Breeze global theme. Blur is not missing all the time, the bug occurs sometimes after I change some
Plasma settings. I was able to reproduce a few minutes ago by changing global theme and gtk theme
(I can't reproduce again doing the same changes though) and not even reboot fixed it. I had to change global theme and switch back to Breeze to get a task switcher with blur again. I'm posting a screenshot showing Breeze task switcher without blur.
Comment 4 Vlad Zahorodnii 2021-05-15 09:56:16 UTC
Same here, I've tried changing the desktop theme, but the background behind the task switcher is blurred all the time. I have a suspicion that it might be a plasma theme related bug.
Comment 5 Bug Janitor Service 2021-06-05 18:06:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1072
Comment 6 Vlad Zahorodnii 2021-06-07 06:03:40 UTC
Git commit cade5064c3ffd90e20b5a99cd2e8ccced73e5912 by Vlad Zahorodnii.
Committed on 07/06/2021 at 06:03.
Pushed by vladz into branch 'master'.

effects/blur: Properly handle empty blur regions set by internal windows

The task switcher has a valid empty blur region and the blur effect
misdetects that, which results in no blurred background.

M  +9    -6    src/effects/blur/blur.cpp

https://invent.kde.org/plasma/kwin/commit/cade5064c3ffd90e20b5a99cd2e8ccced73e5912
Comment 7 Vlad Zahorodnii 2021-06-07 06:05:59 UTC
Git commit 75c58222e8a3098885be1e4d38ee6a0cb32908b0 by Vlad Zahorodnii.
Committed on 07/06/2021 at 06:05.
Pushed by vladz into branch 'Plasma/5.22'.

effects/blur: Properly handle empty blur regions set by internal windows

The task switcher has a valid empty blur region and the blur effect
misdetects that, which results in no blurred background.


(cherry picked from commit cade5064c3ffd90e20b5a99cd2e8ccced73e5912)

M  +9    -6    src/effects/blur/blur.cpp

https://invent.kde.org/plasma/kwin/commit/75c58222e8a3098885be1e4d38ee6a0cb32908b0