effects/blur: Properly handle empty blur regions set by internal windows

The task switcher has a valid empty blur region and the blur effect
misdetects that, which results in no blurred background.

BUG: 433131


(cherry picked from commit cade5064c3ffd90e20b5a99cd2e8ccced73e5912)